# qjulia2

./: CMakeLists.txt  LICENSE  README.md
data/: example.scene  example1.scene  example2.scene  example3.scene  example4.scene  example4_dof.scene  example_scene.txt  julia.scene  sphere_scene.txt
doc/: CMakeLists.txt  Doxygen.cfg.in
include/qjulia2/camera/: camera3d.h
include/qjulia2/core/: base.h  engine.h  film.h  ray.h  resource_mgr.h  scene.h  shape.h  tokenizer.h  transform.h
include/qjulia2/integrator/: default.h  normal.h
include/qjulia2/light/: simple.h
include/qjulia2/shape/: julia3d.h  plane.h  sphere.h
src/: CMakeLists.txt
src/app/: qjulia.cc
src/camera/: camera3d.cc  camera3d.h
src/cli/: CMakeLists.txt  qjulia2-cli.cc
src/core/: CMakeLists.txt  algorithm.cc  algorithm.h  arg_parse.h  array2d.h  base.h  camera.cc  camera.h  color.h  config.h.in  developer.cc  developer.h  dof_simulator.cc  dof_simulator.h  efloat.cc  efloat.h  engine.cc  engine.h  entity.h  film.cc  film.h  image.cc  image.h  image_io.cc  image_io.h  integrator.cc  integrator.h  integrator_return.h  intersection.h  light.cc  light.h  material.cc  material.h  messages.cc  messages.h  object.cc  object.cu  object.h  qjs_parser.cc  qjs_parser.h  (+25 more)
src/core/camera/: camera3d.cc  camera3d.h
src/core/developer/: default.cc  default.h  simple.cc  simple.h
src/core/image_io/: image_io_png.cc  image_io_png.h  image_io_tiff.cc  image_io_tiff.h
src/core/integrator/: default.cc  default.h  normal.cc  normal.h  time.cc  time.h
src/core/light/: simple.cc  simple.h
src/core/shape/: julia3d.cc  julia3d.h  julia3d_impl_cpu.cc  julia3d_impl_cpu.h  julia3d_impl_gpu.cu  julia3d_impl_gpu.h  julia3d_kernel.cc  julia3d_kernel.h  plane.cc  plane.h  sphere.cc  sphere.h
src/gui/: CMakeLists.txt  backend_api.h  camerapanel.cc  camerapanel.h  camerapanel.ui  controlbar.cc  controlbar.h  controlbar.ui  engine.cc  engine.h  fractalpanel.cc  fractalpanel.h  fractalpanel.ui  generalpanel.cc  generalpanel.h  generalpanel.ui  main.cc  mainwindow.cc  mainwindow.h  mainwindow.ui  module_base.cc  module_base.h  module_camera.cc  module_camera.h  module_camera.ui  module_julia3d_shape.cc  module_julia3d_shape.h  module_julia3d_shape.ui  module_placeholder.cc  module_placeholder.h  module_placeholder.ui  module_point_light.cc  module_point_light.h  module_point_light.ui  module_sun_light.cc  module_sun_light.h  module_sun_light.ui  panel.h  panel_dev.cc  panel_dev.h  (+4 more)
src/gui/plugins/: CMakeLists.txt  colorlchplugin.cc  colorlchplugin.h  colorlchplugin.json  controlbarplugin.cc  controlbarplugin.h  controlbarplugin.json  lightcontrolplugin.cc  lightcontrolplugin.h  sphericalcoordsplugin.cc  sphericalcoordsplugin.h  xyzcoordsplugin.cc  xyzcoordsplugin.h  xyzcoordsplugin.json
src/gui/widgets/: CMakeLists.txt  colorlch.cc  colorlch.h  colorlch.ui  controlbar.cc  controlbar.h  controlbar.ui  lightcontrol.cc  lightcontrol.h  lightcontrol.ui  qjulia2widget.h  sphericalcoords.cc  sphericalcoords.h  sphericalcoords.ui  xyzcoords.cc  xyzcoords.h  xyzcoords.ui
src/integrator/: default.cc  normal.cc  normal.h
src/light/: simple.cc
src/shape/: julia3d.cc  plane.cc  plane.h  sphere.cc  sphere.h
src/test/: CMakeLists.txt  test_algorithm.cc  test_args.cc  test_array2d.cc  test_camera.cc  test_color.cc  test_efloat.cc  test_scene_builder.cc  test_texture.cc  test_transform.cc  test_vector.cc
test/: CMakeLists.txt  test_algorithm.cc  test_efloat.cc  test_main.cc  test_vector.cc
